알림데이터와+xml 만 추가. -> 리스트뷰 완성해보자

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".NotificationListActivity"></activity>
         <activity android:name=".ViewReplyDetailActivity" />
         <activity android:name=".EditReplyActivity" />
         <activity android:name=".ViewTopicDetailActivity" />
